<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order_summary">Order Summary</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank You!</string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="total">Total</string>
    <string name="toast_more_than_100_cups">You cannot have more than 100 cups of coffee</string>
    <string name="toast_less_than_1_cup">You cannot have less than 1 cup of coffee</string>
    <string name="just_java_order_for">"Just Java order for"</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
