<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords"
            android:hint="@string/name"/>

        <TextView
            android:text="@string/toppings"
            style="@style/header_style" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:text="@string/whipped_cream"
            style="@style/checkbox_style" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:text="@string/chocolate"
            style="@style/checkbox_style" />

        <TextView
            android:text="@string/quantity"
            style="@style/header_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-"
                style="@style/inc_dec_button_style" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="+"
                style="@style/inc_dec_button_style" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>

</ScrollView>
